--- a/index.html
+++ b/index.html
@@ -68,12 +68,13 @@
             </div>
 
             <div id="playlist-container">
-                <hr id="playlist-top-line">
-                <button id="close-btn" class="nav-btn"
-                        data-toggle="tooltip" data-placement="top" title="Close">
-                    <img src="icons/close.svg" alt="close"/>
-                </button>
-                <div id="playlist-content"></div>
+                <div id="playlist-content">
+                    <button id="close-btn" class="nav-btn"
+                            data-toggle="tooltip" data-placement="top" title="Close">
+                        <img src="icons/close.svg" alt="close"/>
+                    </button>
+                    <hr id="playlist-divider">
+                </div>
             </div>
 
         </div>
